--- a/django_blog_app/templates/base.html
+++ b/django_blog_app/templates/base.html
@@ -5,12 +5,20 @@
         <title>
             Django Blog
         </title>
+        <link href="https://fonts.googleapis.com/css?family=\
+Source+Sans+Pro:400" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         
     </head>
     <body>
         <header>
-            <h1><a href="{% url 'home' %}">Django Blog</a></h1>
+            <div class="nav-left">
+                <h1><a href="{% url 'home' %}">Django Blog</a></h1>
+            </div>
+            <div class="nav-right">
+                <a href="{% url "post_new" %}">+ Create New Blog Post</a>
+            </div>
+            
         </header>
         <div>
             {% block content %}
