--- a/django_blog_app/templates/post_detail.html
+++ b/django_blog_app/templates/post_detail.html
@@ -4,5 +4,6 @@
     <h2>{{ post.title }}</h2>
     <p>{{ post.body }}</p>
 </div>
+<a href="{% url 'post_edit' post.pk %}">+ Edit this post</a>
 
 {% endblock content %}
