--- a/django_blog_app/templates/post_detail.html
+++ b/django_blog_app/templates/post_detail.html
@@ -5,5 +5,6 @@
     <p>{{ post.body }}</p>
 </div>
 <a href="{% url 'post_edit' post.pk %}">+ Edit this post</a>
-
+<br>
+<a href="{% url "post_delete" post.pk %}">+ Delete Blog Post</a>
 {% endblock content %}
