Lesson VI Homepage updated for logged user

--- a/django_blog_app/templates/base.html
+++ b/django_blog_app/templates/base.html
@@ -20,6 +20,12 @@ Source+Sans+Pro:400" rel="stylesheet">
             </div>
             
         </header>
+        {% if user.is_authenticated %}
+        <p>Hi {{ user.username }}!</p>
+        {% else %}
+        <p>You are not logged in </p>
+        <a href="{% url 'login' %}">Log In</a>
+        {% endif %}
         <div>
             {% block content %}
             {% endblock content %}
