--- a/django_blog_app/templates/base.html
+++ b/django_blog_app/templates/base.html
@@ -22,6 +22,7 @@ Source+Sans+Pro:400" rel="stylesheet">
         </header>
         {% if user.is_authenticated %}
         <p>Hi {{ user.username }}!</p>
+        <p><a href="{% url 'logout' %}">Logout</a></p>
         {% else %}
         <p>You are not logged in </p>
         <a href="{% url 'login' %}">Log In</a>
