--- a/django_blog_app/templates/base.html
+++ b/django_blog_app/templates/base.html
@@ -26,6 +26,8 @@ Source+Sans+Pro:400" rel="stylesheet">
         {% else %}
         <p>You are not logged in </p>
         <a href="{% url 'login' %}">Log In</a>
+        <br>
+        <a href="{% url 'signup' %}">Sign Up</a>
         {% endif %}
         <div>
             {% block content %}
