--- a/django_blog_app/templates/base.html
+++ b/django_blog_app/templates/base.html
@@ -5,32 +5,54 @@
         <title>
             Django Blog
         </title>
-        <link href="https://fonts.googleapis.com/css?family=\
-Source+Sans+Pro:400" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
         
     </head>
     <body>
-        <header>
-            <div class="nav-left">
-                <h1><a href="{% url 'home' %}">Django Blog</a></h1>
-            </div>
-            <div class="nav-right">
-                <a href="{% url "post_new" %}">+ Create New Blog Post</a>
-            </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             
-        </header>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'home'%}">Home</a>
+                    </li>
+                   
+                </ul>
+            </div>
+            <div class="navbar-nav ml-auto">
+                <ul class="navbar-nav">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{% url 'logout'%}">Logout</a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <a class="nav-item nav-link" href="{% url 'signup'%}">Signup</a>
+                    
+
+                    </li>
+                    <li>
+                        <a class="nav-item nav-link" href="{% url 'login'%}">Login</a>
+
+                    </li>
+
+                    {% endif %}
+                    
+                    
+                </ul>
+                
+                
+            </div>
+        </nav>
         {% if user.is_authenticated %}
-        <p>Hi {{ user.username }}!</p>
-        <p><a href="{% url 'logout' %}">Logout</a></p>
-        {% else %}
-        <p>You are not logged in </p>
-        <a href="{% url 'login' %}">Log In</a>
-        <br>
-        <a href="{% url 'signup' %}">Sign Up</a>
+        <div class="col-md-6">
+            <h2 class="text-right text-primary">Hello {{request.user}}</h2>
+        </div>
         {% endif %}
-        <div>
+        
             {% block content %}
+
             {% endblock content %}
         </div>
     </body>
