--- a/django_blog_app/templates/home.html
+++ b/django_blog_app/templates/home.html
@@ -1,13 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% for post in post_list %}
-        <div class="post-entry">
-            <h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.body }}</p>
+  
 
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md3 g-4">
+            {% for post in post_list %}
+                
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title fw-bold">
+                                <a href="{% url 'post_detail' post.pk %}">{{post.title}}</a>
+                            </h5>
+                            <p class="card-text">{{post.body|truncatewords:20 }}</p>
+                            <p class="card-text"><strong>Author: </strong>{{post.author}}</p>
+
+                        </div>
+                    </div>
+               
+            {% endfor %}
         </div>
-            
-        
-    {% endfor %}
+    </div>
+    
 {% endblock content %}
