--- a/django_blog_app/templates/post_detail.html
+++ b/django_blog_app/templates/post_detail.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="post-entry">
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.body }}</p>
-</div>
+<div class="container">
+    <h1>{{post.title}}</h1>
+    <p><strong>Author: </strong>{{post.author}}</p>
+    <div class="card mb-4">
+        <div class="card-body">
+            <p class="card-text">{{post.body}}</p>
+        </div>
+        {% if post.author == request.user %}
 <a href="{% url 'post_edit' post.pk %}">+ Edit this post</a>
 <br>
 <a href="{% url "post_delete" post.pk %}">+ Delete Blog Post</a>
+
+{% endif %}
+    </div>
+</div>
+
+
+
+
 {% endblock content %}
